--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,44 +3,47 @@ body {
 }
 
 /* Home page */
-.center-board {
-  border: 5px solid;
-  text-align: center;
-  /* height: 150px;
-  line-height: 100px; */
-  margin-top: 100px;
-  color: white;
+  .center-board {
+    border: 5px solid;
+    text-align: center;
+    /* height: 150px;
+    line-height: 100px; */
+    margin-top: 100px;
+    color: white;
 }
-.home-links {
-  margin-top: 200px;
+  .home-links {
+    margin-top: 200px;
 }
 /* Home page  */
 
+
 /* Shop page */
 .shop-center{
-  background-color: white;
-  border: 5px;
-  border-style: solid;
-  border-color: red;
-  text-align: center;
+    background-color: white;
+    border: 5px;
+    border-style: solid;
+    border-color: red;
+    text-align: center;
 
-  /* height: 150px;
-  line-height: 100px; */
-  margin-top: 100px;
+    /* height: 150px;
+    line-height: 100px; */
+    margin-top: 100px;
 }
 
-.product-container {
-  display: flex; 
-  justify-content: center;
-  margin-top: 80px;
-  margin-right: 40px;
+  .product-container {
+    display: flex; 
+    justify-content: center;
+    margin-top: 80px;
+    margin-right: 200px;
 }
 
-.product-name {
-  font-weight: 500;
-  text-decoration: 'none';
+  .product-name {
+    font-weight: 500;
+    text-decoration: 'none';
+  }
+  .product-card {
+    color: black;
 }
-
 /* Shop page */
 
 
