--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,9 +13,9 @@ body {
 }
   .home-links {
     margin-top: 200px;
-}
-/* Home page  */
+} /* Home page  */
 
+/* ----------- */
 
 /* Shop page */
 .shop-center{
@@ -43,10 +43,10 @@ body {
   }
   .product-card {
     color: black;
-}
-/* Shop page */
+} /* Shop page */
 
 
+/* ------- */
 
 /* Mobile */
 @media (max-width: 700px) {
